updates to minecraft builder script